--- a/packages/app-dashboard/client/lib/semantic-ui/site/globals/site.variables.import.less
+++ b/packages/app-dashboard/client/lib/semantic-ui/site/globals/site.variables.import.less
@@ -2,7 +2,7 @@
      User Global Variables
 *******************************/
 
-@green:          #52D944;
+@green:          #8ED137;
 @offWhite:       #F2F2F2;
 @grey:           #313D3B;
 @black:          #283230;
