--- a/packages/app-marketplace/client/lib/semantic-ui/theme.config.import.less
+++ b/packages/app-marketplace/client/lib/semantic-ui/theme.config.import.less
@@ -22,7 +22,7 @@
 @reset      : 'default';
 
 /* Elements */
-@button     : 'basic';
+@button     : 'default';
 @container  : 'default';
 @divider    : 'default';
 @flag       : 'default';
