--- a/packages/firstcut-marketplace-client/src/index.css
+++ b/packages/firstcut-marketplace-client/src/index.css
@@ -1,4 +1,4 @@
-body {
+/* body {
   margin: 0;
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -11,4 +11,36 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+ */
+html, body, #root {
+  height:100%;
+}
+
+.ui.button.signup__raised {
+  box-shadow: 0px 5px 23px -1px rgba(0,0,0,0.5);
+  border: none;
+}
+
+.signup__form {
+  max-width: 400px !important;
+}
+
+.signup__tagline {
+  padding-top: calc(50%) !important;
+  max-width: 400px;
+}
+
+.copyright {
+  position: absolute;
+  right: calc(50% - 145px);
+  bottom: 0;
+}
+
+.ui.button.signup__centered {
+  position: absolute;
+  top: calc(47% - 25px);
+  left: calc(50% - 60px);
+  width: 120px;
+  height: 50px;
 }
